force-app/main/default/objects/TPM_Initial_BO_Load_Data__mdt/TPM_Initial_BO_Load_Data__mdt.object-meta.xml
<CustomObject>
    <description>Records for creation of BO Object records</description>
    <label>Initial BO Load Data</label>
    <pluralLabel>Initial BO Load Data</pluralLabel>
</CustomObject>