force-app/main/default/objects/TPM_Initial_BO_Load_Data__mdt/fields/BO_API_Workflow_Name__c.field-meta.xml
<CustomField>
    <fullName>BO_API_Workflow_Name__c</fullName>
    <label>BO API Workflow Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>