force-app/main/default/objects/TPM_Initial_BO_Load_Data__mdt/fields/BO_Output_Entity_Name__c.field-meta.xml
<CustomField>
    <fullName>BO_Output_Entity_Name__c</fullName>
    <label>BO Output Entity Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>