force-app/main/default/objects/TPM_Initial_BO_Load_Data__mdt/fields/Business_Object_API_Entity_Name__c.field-meta.xml
<CustomField>
    <fullName>Business_Object_API_Entity_Name__c</fullName>
    <label>Business Object API Entity Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>