force-app/main/default/objects/TPM_Initial_BO_Load_Data__mdt/fields/cgcloud_BO_API_Workflow_Step__c.field-meta.xml
<CustomField>
    <fullName>cgcloud_BO_API_Workflow_Step__c</fullName>
    <label>Workflow Step Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>