force-app/main/default/objects/TPM_Initial_BO_Load_Data__mdt/fields/CGCLOUD_DESCRIPTION_C__c.field-meta.xml
<CustomField>
    <fullName>CGCLOUD_DESCRIPTION_C__c</fullName>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>