force-app/main/default/objects/TPM_Initial_BO_Load_Data__mdt/fields/cgcloud_Maps_To_c__c.field-meta.xml
<CustomField>
    <fullName>cgcloud_Maps_To_c__c</fullName>
    <label>Maps To</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>