force-app/main/default/objects/TPM_Initial_BO_Load_Data__mdt/fields/cgcloud_Maximum_Length_c__c.field-meta.xml
<CustomField>
    <fullName>cgcloud_Maximum_Length_c__c</fullName>
    <label>Maximum Length</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>