force-app/main/default/objects/TPM_Initial_BO_Load_Data__mdt/fields/CGCLOUD_METHOD_C__c.field-meta.xml
<CustomField>
    <fullName>CGCLOUD_METHOD_C__c</fullName>
    <label>Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>