force-app/main/default/objects/TPM_Initial_BO_Load_Data__mdt/fields/cgcloud_Path_c__c.field-meta.xml
<CustomField>
    <fullName>cgcloud_Path_c__c</fullName>
    <label>Path</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>