force-app/main/default/objects/TPM_Initial_BO_Load_Data__mdt/fields/cgcloud_Pattern__c.field-meta.xml
<CustomField>
    <fullName>cgcloud_Pattern__c</fullName>
    <label>Pattern</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>