force-app/main/default/objects/TPM_Initial_BO_Load_Data__mdt/fields/Input_Mapping_Field__c.field-meta.xml
<CustomField>
    <fullName>Input_Mapping_Field__c</fullName>
    <label>Input Mapping Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>