force-app/main/default/objects/TPM_Initial_BO_Load_Data__mdt/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <label>Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Input</fullName>
                <default>true</default>
                <label>Input</label>
            </value>
            <value>
                <fullName>Output</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>