force-app/main/default/objects/TPM_Initial_BO_Load_Data__mdt/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <description>Name</description>
    <label>Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>