force-app/main/default/objects/TPM_Initial_BO_Load_Data__mdt/fields/Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_Name__c</fullName>
    <description>Object name</description>
    <label>Object Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>cgcloud__BO_API_Workflow_Step__c</fullName>
                <default>true</default>
                <label>cgcloud__BO_API_Workflow_Step__c</label>
            </value>
            <value>
                <fullName>cgcloud__BO_API_Workflow__c</fullName>
            </value>
            <value>
                <fullName>cgcloud__BO_API_Step_Input_Structure__c</fullName>
            </value>
            <value>
                <fullName>cgcloud__BO_API_Output_Entity__c</fullName>
            </value>
            <value>
                <fullName>cgcloud__BO_API_Workflow_Entity__c</fullName>
            </value>
            <value>
                <fullName>cgcloud__BO_API_Workflow_Workflow_Step__c</fullName>
            </value>
            <value>
                <fullName>cgcloud__BO_API_Entity__c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>