force-app/main/default/objects/TPM_Initial_BO_Load_Data__mdt/fields/Output_Mapping_Field__c.field-meta.xml
<CustomField>
    <fullName>Output_Mapping_Field__c</fullName>
    <label>Output Mapping Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>