force-app/main/default/objects/TPM_Initial_BO_Load_Data__mdt/fields/Sort__c.field-meta.xml
<CustomField>
    <fullName>Sort__c</fullName>
    <label>Sort</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>